<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createordertest"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@drawable/centered_background_one"
    android:clipToOutline="true"
    android:theme="@style/Theme.MyApplication"
    tools:context="com.smartstock.myapplication.ui.CreateOrderFragment">

    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/section_create_order_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        >
        <TextView
            android:id="@+id/crear_nueva"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_pedido"

            android:textAppearance="@style/crear_nueva"
            android:lineSpacingExtra="2sp"
            android:gravity="center"
            android:minHeight="50dp"
            android:contentDescription="@string/crear_pedido_titulo"
            android:importantForAccessibility="yes"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_create_order_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_create_order_1"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomExposedDropdownMenu"
            android:id="@+id/textField4_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/seleccionar_cliente"
            android:paddingHorizontal="4dp"
            android:background="@color/white"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary"
            android:contentDescription="@string/desc_seleccionar_cliente">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewCreate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:popupBackground="@drawable/custom_popup_background"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:inputType="none"
                android:importantForAccessibility="yes"
                />


        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_create_order_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_create_order_2"
        android:clipToOutline="true"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/LoginTextInputLayoutStyle2"
            android:id="@+id/textField7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/seleccionar_fecha"
            android:paddingHorizontal="4dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_calendar_today_24"
            app:endIconContentDescription="@string/seleccionar_fecha"
            app:hintTextColor="@color/black"
            app:endIconTint="@color/schemesSecondary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/datePickerCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:inputType="date"
                android:background="@color/white"
                android:textColor="@color/black"
                android:contentDescription="@string/desc_seleccionar_fecha"
                android:importantForAccessibility="yes"/>

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_create_order_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_create_order_3"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CustomExposedDropdownMenu"
            android:id="@+id/textField4_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/tipo_pago"
            android:paddingHorizontal="4dp"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/black"
            android:background="@color/white"
            app:endIconTint="@color/schemesSecondary"
            android:contentDescription="@string/desc_seleccionar_tipo_pago">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextViewCreate2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:popupBackground="@drawable/custom_popup_background"
                android:textSize="@dimen/textAppearanceBodyLarge"
                android:inputType="none"
                android:importantForAccessibility="yes"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_create_order_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_create_order_4"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        >

        <Button
            android:id="@+id/buttonAddProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:minWidth="180dp"
            android:minHeight="48dp"
            android:backgroundTint="@color/schemesOrange600"
            android:background="@drawable/rounded_button_small"
            android:text="@string/add_product"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/textAppearanceTitleSmall"
            android:contentDescription="@string/boton_agregar_producto"
            android:importantForAccessibility="yes"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/section_create_order_6"
        android:layout_width="411dp"
        android:layout_height="200dp"
        android:clipToOutline="true"
        android:layout_below="@id/section_create_order_5"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/productsOrderRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/product_item" />
    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/section_create_order_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="yes"
        android:clipToOutline="true"
        android:layout_below="@id/section_create_order_6"
        android:contentDescription="@string/lista_productos_total"
        >
        <TextView
            android:id="@+id/total_value_order"
            android:layout_width="420dp"
            android:layout_height="50dp"
            android:text="@string/total"
            android:textAppearance="@style/total"
            android:lineSpacingExtra="2sp"
            android:gravity="left|center_vertical"
            />
    </RelativeLayout>
    <!-- Auto layout, variables, and unit scale are not yet supported -->
    <RelativeLayout
        android:id="@+id/section_create_order_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToOutline="true"
        android:layout_below="@id/section_create_order_7"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp"
        >
        <Button
            android:id="@+id/buttonCancelCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="180dp"
            android:minHeight="60dp"
            android:background="@drawable/rounded_button"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/center_divider_action"
            android:layout_marginLeft="2dp"
            android:backgroundTint="@color/schemesOrange600"
            android:text="@string/cancelar"
            android:textColor="@color/colorBackground"
            android:contentDescription="@string/boton_cancelar"
            android:importantForAccessibility="yes"
            android:textSize="@dimen/textAppearanceHeadlineSmall" />
        <Button
            android:id="@+id/buttonAcceptCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:minWidth="180dp"
            android:minHeight="60dp"
            android:background="@drawable/rounded_button"
            android:layout_marginRight="2dp"
            android:layout_toRightOf="@+id/center_divider_action"
            android:backgroundTint="@color/schemesOrange600"
            android:text="@string/crear"
            android:textColor="@color/colorBackground"
            android:contentDescription="@string/boton_agregar_crear"
            android:importantForAccessibility="yes"
            android:textSize="@dimen/textAppearanceHeadlineSmall" />
        <View
            android:id="@+id/center_divider_action"
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="invisible" />
    </RelativeLayout>
</RelativeLayout>

